scenario-3/ping-server-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: ping-server
  name: ping-server
  selfLink: /api/v1/namespaces/default/services/ping-server
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: ping-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
