scenario-3/pong-server-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: pong-server
  name: pong-server
  selfLink: /api/v1/namespaces/default/services/pong-server
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30173
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    run: pong-server
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
