scenario-3/ping-server-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /server
  name: ingress-server
  namespace: default
spec:
  rules:
  - host: app.exmaple.com
    http:
      paths:
      - backend:
          serviceName: ping-server
          servicePort: 8080
        path: /
